<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/area_image"
    tools:context=".MyInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-78dp"
        tools:layout_editor_absoluteY="200dp">

        <RelativeLayout
            android:id="@+id/game_info"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15sp"
                android:layout_marginTop="25sp"
                android:layout_marginEnd="15sp"
                android:layout_marginBottom="10sp"
                android:text="@string/my_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/red_words"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/game_area"
            android:layout_width="match_parent"
            android:layout_height="550sp"
            android:layout_below="@+id/game_info"
            android:layout_marginTop="0sp">


            <TextView
                android:id="@+id/textViewInfo1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_info"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/game_area"
            android:layout_marginTop="0sp">

            <Button
                android:id="@+id/my_info_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="5sp"
                android:backgroundTint="@color/golden_buttons"
                android:onClick="GoBack"
                android:text="@string/button_my_info_out"
                android:textSize="30sp" />

        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>