<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/area_image"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-78dp"
        tools:layout_editor_absoluteY="200dp">

        <RelativeLayout
            android:id="@+id/game_info"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15sp"
                android:layout_marginTop="25sp"
                android:layout_marginEnd="15sp"
                android:layout_marginBottom="10sp"
                android:text="@string/my_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/red_words"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/game_area"
            android:layout_width="match_parent"
            android:layout_height="450sp"
            android:layout_below="@+id/game_info"
            android:layout_marginTop="0sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card11"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card13"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card14"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card15"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card16"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/game_area"
            android:layout_marginTop="0sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/my_info_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5sp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/golden_buttons"
                        android:onClick="MyInfo"
                        android:text="@string/button_my_info_in"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/restart_game"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/golden_buttons"
                        android:text="@string/button_restart"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>